adjusted some spacing issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -30,7 +30,6 @@ body {
     float: left;
     display: flex;
     flex-direction: column;
-    display: none;
 
 }
 
@@ -80,6 +79,7 @@ body {
     border-bottom: solid;
     position: relative;
     right: 10%;
+    
 }
 #pProj {
     border-bottom: solid;
@@ -94,7 +94,7 @@ body {
     padding-top: 10%;
     padding-bottom: 10%;
     font-size: 65px;
-    position: relative;e
+    position: relative;
 }
 
 #abmPNG {
